--- a/src/html/index.html
+++ b/src/html/index.html
@@ -153,7 +153,12 @@
 			</thead>
 			<tbody>
 				<tr>
-					<td class="subj"><a href="01_noti/list.html?v=210818" target="_blank">list</a></td>
+					<td class="subj"><a href="01_noti/list.html?v=210818" target="_blank">리스트</a></td>
+					<td>21.08.18</td>
+					<td>-</td>
+				</tr>
+				<tr>
+					<td class="subj"><a href="01_noti/detail.html" target="_blank">상세</a></td>
 					<td>21.08.18</td>
 					<td>-</td>
 				</tr>
