--- a/src/html/index.html
+++ b/src/html/index.html
@@ -122,14 +122,12 @@
 				css 파일들 중 가장 마지막에 위치시켜주세요.
 			</li>
 			<li>
-				- UI 스크립트는 <strong>ui.js</strong> 입니다. /dist/js 안에 있는 파일들은 사용하는 플러그인들 이니 추가 부탁드립니다.
+				- UI 확인 Url : <a href="https://thecheckdev.github.io/thecheck_webview/html/index.html?v=210818">https://thecheckdev.github.io/thecheck_webview/html/index.html</a>
 			</li>
 			<li>
-				<strong>- style.css, ui.js 파일에 직접 수정하지 말아주세요. 수정이 필요할시 요청 부탁 드립니다.</strong>
+				- github Url : <a href="https://github.com/thecheckdev/thecheck_webview">https://github.com/thecheckdev/thecheck_webview</a>
 			</li>
-			<li>
-				- UI 확인 Url : <a href="https://thecheckdev.github.io/thecheck_webview/html/index.html?v=210817">https://thecheckdev.github.io/thecheck_webview/html/index.html</a>
-			</li>
+			
 		</ul>
 		<!-- <h2 class="txt_red">[업데이트 내용]</h2>
 		<ul class="desc_ul">
@@ -153,14 +151,9 @@
 			</thead>
 			<tbody>
 				<tr>
-					<td class="subj"><a href="01_noti/list.html?v=210818" target="_blank">리스트</a></td>
+					<td class="subj"><a href="01_noti/list.html?v=210818" target="_blank">리스트, 팝업 상세</a></td>
 					<td>21.08.18</td>
-					<td>-</td>
-				</tr>
-				<tr>
-					<td class="subj"><a href="01_noti/detail.html" target="_blank">상세</a></td>
-					<td>21.08.18</td>
-					<td>-</td>
+					<td>21.08.19</td>
 				</tr>
 			</tbody>
 		</table>
