--- a/01_noti/src/html/01_noti/list.html
+++ b/01_noti/src/html/01_noti/list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko" class="noti"> <!-- 210906 noti 클래스 추가-->
 	<include src="../include/head.html" title="공지사항 리스트 | 더체크"></include>
 	<script>
 		document.addEventListener("DOMContentLoaded", () => {
