--- a/01_noti/src/html/index.html
+++ b/01_noti/src/html/index.html
@@ -122,7 +122,7 @@
 				css 파일들 중 가장 마지막에 위치시켜주세요.
 			</li>
 			<li>
-				- UI 확인 Url : <a href="https://thecheckdev.github.io/thecheck_webview/html/index.html?v=210818">https://thecheckdev.github.io/thecheck_webview/html/index.html</a>
+				- UI 확인 Url : <a href="https://thecheckdev.github.io/thecheck_webview/html/index.html?v=210902">https://thecheckdev.github.io/thecheck_webview/html/index.html</a>
 			</li>
 			<li>
 				- github Url : <a href="https://github.com/thecheckdev/thecheck_webview">https://github.com/thecheckdev/thecheck_webview</a>
@@ -151,9 +151,14 @@
 			</thead>
 			<tbody>
 				<tr>
-					<td class="subj"><a href="01_noti/list.html?v=210818" target="_blank">리스트, 팝업 상세 </a></td>
+					<td class="subj"><a href="01_noti/list.html?v=210902" target="_blank">리스트, 팝업 상세 </a></td>
 					<td>21.08.18</td>
 					<td>21.08.19</td>
+				</tr>
+				<tr>
+					<td class="subj"><a href="01_noti/onfumall.html?v=210902" target="_blank">로딩</a></td>
+					<td>21.09.02</td>
+					<td>-</td>
 				</tr>
 			</tbody>
 		</table>
