--- a/01_noti/src/html/01_noti/list.html
+++ b/01_noti/src/html/01_noti/list.html
@@ -7,11 +7,13 @@
 			var btn_prev = document.querySelectorAll("header .btn_prev")[0];
 			var btn_close = document.querySelectorAll("header .btn_close")[0];
 			var pop_container = document.querySelectorAll(".pop_detail .bx")[0];
-			pop_container.style.width = window.innerWidth+"px";
+			var body = document.getElementsByTagName("body")[0];
+			// pop_container.style.width = window.innerWidth+"px";<!-- 210906 해당 코드 삭제 부탁드립니다 -->
 			btn_close.addEventListener("click", function(){
 				pop_detail.classList.remove("show");
 				btn_prev.classList.remove("hide");
 				btn_close.classList.add("hide");
+				body.classList.remove("no_scroll");
 			});
 			var uanaVigatorOs = navigator.userAgent;
 			var AgentUserOs = uanaVigatorOs.replace(/ /g,'');
@@ -26,7 +28,7 @@
 		});
 		window.addEventListener('resize', function(){
 			var pop_container = document.querySelectorAll(".pop_detail .bx")[0];
-			pop_container.style.width = window.innerWidth+"px";
+			// pop_container.style.width = window.innerWidth+"px";<!-- 210906 해당 코드 삭제 부탁드립니다 -->
 		});
 		function fnOpenPop() {
 			var body = document.getElementsByTagName("body")[0];
