--- a/01_noti/src/html/01_noti/onfumall.html
+++ b/01_noti/src/html/01_noti/onfumall.html
@@ -2,10 +2,14 @@
 <html lang="ko">
 	<include src="../include/head.html" title="공지사항 리스트 | 더체크">
         <script>         
-            var strCd       = getParam('strCd');
-            var token       = getParam('token');
-            var loginId     = getParam('loginId');
-            var targetUrl   = getParam('targetUrl');
+            // var strCd       = getParam('strCd');
+            // var token       = getParam('token');
+            // var loginId     = getParam('loginId');
+            // var targetUrl   = getParam('targetUrl');
+            var strCd       = 'S000257579'; //getParam('strCd');
+            var token       = 'testToken'; // getParam('token');
+            var loginId     = 'testios17'; // getParam('loginId');
+            var targetUrl   = 'https://ofm.thecheck.co.kr/'; // getParam('targetUrl');
             var PLATFORM_ID = 'P01';
             var BASE_URL    = 'https://dev1.thecheck.co.kr:9001';
             var termsIdList = []; // 동의여부 저장에 사용되는 termsIdList 변수 값
